# term_ai

./: .gitignore  README.md  pharaprased_voca.jsonl  pyproject.toml  raw_plan.pptx
configs/augmentation/: default.yaml
configs/experiment/: default.yaml
data/aug/: dev_aug_auto_pass_v1.jsonl  dev_aug_candidate_v1.jsonl  dev_aug_candidate_v1.manifest.json  test_aug_auto_pass_v1.jsonl  test_aug_candidate_v1.jsonl  test_aug_candidate_v1.manifest.json  test_context_cloze_patch_auto_pass_v1.jsonl  test_context_cloze_patch_candidate_v1.jsonl  test_context_cloze_patch_candidate_v1.manifest.json  train_aug_auto_pass_v1.jsonl  train_aug_candidate_v1.jsonl
data/eval/: eval_set_policy_v1.json  test_cloze_validated_v1.jsonl  test_raw_v1.jsonl
data/judge/: dev_judge_v1.jsonl  test_context_cloze_patch_judge_v1.jsonl  test_judge_v1.jsonl  train_judge_v1.jsonl
data/manifests/: version_manifest.json
data/metadata/: aug_judge_pass_v1.jsonl  dev_aug_judge_pass_v1.jsonl  kd_dev_view_v1.jsonl  kd_dev_view_v1.policy.json  kd_test_view_v1.jsonl  kd_test_view_v1.policy.json  kd_train_view_v1.policy.json  (+6 more)
docs/: b0_to_h1_conda_term_toeic_commands.md
experiments/: model_matrix.json
scripts/: run_judge_and_apply.ps1  run_judge_and_apply_split.ps1  run_remaining_experiments.sh  start_judge_and_apply_background.ps1  start_judge_and_apply_split_background.ps1
term_ai/: __init__.py  contracts.py  env.py
tests/: test_contracts.py  test_dataset_builder.py  test_experiment_tools.py  test_filters.py  test_metrics.py  test_progress.py  test_split.py  test_training_compat.py
(+340 files in other folders)
